--- a/composer.json
+++ b/composer.json
@@ -19,5 +19,8 @@
         "psr-4": {
             "demokn\\api\\": "src/"
         }
+    },
+    "require-dev": {
+        "squizlabs/php_codesniffer": "^3.4"
     }
 }
