Git ignore composer.lock file

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,9 @@ Thumbs.db
 # composer vendor dir
 /vendor
 
+# composer lock file
+composer.lock
+
 # composer itself is not needed
 composer.phar
 
