--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "demokn/yii2-api",
     "description": "使用 yii2 开发 api 接口时用的扩展, 包含常用的输入验证, 格式化响应, ActiveRecord基类, 日志流Target等",
-    "type": "library",
+    "type": "yii2-extension",
     "license": "MIT",
     "authors": [
         {
@@ -11,8 +11,8 @@
     ],
     "require": {
         "yiisoft/yii2": "^2.0.15",
-        "illuminate/support": "^5.8",
-        "illuminate/validation": "^5.8",
+        "illuminate/support": "^6.2",
+        "illuminate/validation": "^6.2",
         "spatie/fractalistic": "^2.7"
     },
     "autoload": {
