--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
     ],
     "require": {
         "yiisoft/yii2": "^2.0.15",
-        "illuminate/support": "^6.2",
-        "illuminate/validation": "^6.2",
+        "illuminate/support": "^6.2 || ^7.0",
+        "illuminate/validation": "^6.2 || ^7.0",
         "spatie/fractalistic": "^2.7"
     },
     "autoload": {
